syntax="proto3";

package mu;

message UserProfile {
	// User info
	int64  identifier   = 1;
	string lastName     = 2;
	string firstName    = 3;
	string profileImage = 4;

	// User stat
	uint64 users_met = 256;
}

// vim: noet:ts=2
