syntax="proto3";

package mu;

import "reply/AuthReply.proto";
import "request/AuthRequest.proto";

service AuthService {
	rpc PerformAuth(mu.AuthTokenRequest) returns (mu.AuthTokenReply);
}

// vim: noet:ts=2
